--- a/package.json
+++ b/package.json
@@ -40,5 +40,12 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "engines": {
+    "node": "20.11.0",
+    "npm": "8.5.5"
+  },
+  "devDependencies": {
+    "typescript": "4.9.5"
+  }
 }
