--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "https://bharat-sme-5365a880f24b.herokuapp.com",
   "engines": {
     "node": "20.11.0",
     "npm": "8.5.5"
